--- a/Latex/canvas Latex.tex
+++ b/Latex/canvas Latex.tex
@@ -36,7 +36,7 @@
 \item $(4,5),(7,6),(4,3),(1,2)$
 \end{enumerate}
 \item Find the point on the x-axis which is equidistant from$(2,-5)$and$(-2,9)$.
-\item Find the values of y for which the distance between the points                  $P(2,-3)and Q(10,y)$is10 units.
+\item Find the values of y for which the distance between the points                  $\vec{P}P(2,-3)and \vec{Q}Q(10,y)$is10 units.
 \item  If $Q(0, 1)$ is equidistant from $P(5, –3) and R(x, 6)$, find the values of x. Also find the
 distances QR and PR.
 \item  Find a relation between x and y such that the point $(x, y)$ is equidistant from the point
