--- a/vectors/10/7.3/2/collinear.tex
+++ b/vectors/10/7.3/2/collinear.tex
@@ -43,7 +43,9 @@ This is Problem-2 from Exercise 7.3.2
 \item (7, –2), (5, 1), (3, k) \\
 \item (8, 1), (k, – 4), (2, –5).\\
 \end{enumerate}
-\section{Solution for problem :1}
+\begin{enumerate} 
+\item[•]\textbf{Solution for problem :1}
+\end{enumerate}
 \begin{align}  
 \vec{A}=\myvec{7 \\-2}
 \vec{B}=\myvec{5 \\ 1}
