--- a/vectors/10/7.3/2/collinear.tex
+++ b/vectors/10/7.3/2/collinear.tex
@@ -44,7 +44,7 @@ This is Problem-2 from Exercise 7.3.2
 \item (8, 1), (k, – 4), (2, –5).\\
 \end{enumerate}
 \begin{enumerate} 
-\item[•]\textbf{Solution for problem :1}
+\item Solution for problem : 1
 \end{enumerate}
 \begin{align}  
 \vec{A}=\myvec{7 \\-2}
@@ -57,7 +57,7 @@ This is Problem-2 from Exercise 7.3.2
 \end{align}
 
  If points on a line  are  collinear, rank of matrix is " 1 "then the vectors are in linearlydependent.
-For 2 × 2 matrix Rank =1 means Determinant is 0.
+For $2\times2$ matrix Rank =1 means Determinant is 0.
 
 Through pivoting,we obtain
 \begin{align}
@@ -106,7 +106,7 @@ Hence proved.
 	  \label{fig:line1.png}
 	  \end{figure} 	 
 \begin{enumerate} 
-\item[•]\textbf{Solution for problem :2}
+\item Solution for problem :2
 \end{enumerate} 
 \begin{align}  
 \vec{A}=\myvec{8 \\ 1}
@@ -118,7 +118,7 @@ Hence proved.
 \vec{E} &= \brak{\vec{A}-\vec{C}} = \brak{\myvec{8 \\ 1 } - \myvec{2 \\-5 } } = \myvec{6 \\6}
 \end{align}
 If points on a line  are  collinear, rank of matrix is " 1 "then the vectors are in linearlydependent.
-For 2 × 2 matrix Rank =1 means Determinant is 0.
+For $2\times2$ matrix Rank =1 means Determinant is 0.
 Through pivoting,we obtain
 \begin{align}
 \vec{F} &={\myvec{\vec{D}\\ \vec{E}}}
