--- a/vectors/10/7.3/2/collinear.tex
+++ b/vectors/10/7.3/2/collinear.tex
@@ -76,9 +76,9 @@ If the rank of the matrix has to be 1 , then -k+4=0.
 
 \begin{align}
 \begin{split}
-\implies -k+4 &=0
+ -k+4 &=0
 \\
-\implies k=4 
+\implies k &=4 
 \end{split}
 \end{align}
 \begin{figure}[h!]
@@ -132,9 +132,9 @@ Through pivoting,we obtain
 If the rank of the matrix has to be 1 , then 18-6k=0.
 \begin{align}
 \begin{split}
-\implies 18-6k &=0
+ 18-6k &=0
 \\
-\implies k=3
+\implies k &=3
 \end{split}
 \end{align}
 
