--- a/vectors/10/7.3/2/collinear.tex
+++ b/vectors/10/7.3/2/collinear.tex
@@ -136,16 +136,15 @@ Through pivoting,we obtain
 0 & \frac{30}{8-k}-6
 }
 \end{align}
-If the rank of the matrix has to be 1 , then 
-$\frac{30}{8-k}-6 =0$
+If the rank of the matrix has to be 1 , then
 \begin{align}
-\begin{split}
+\frac{30}{8-k}-6 &=0
+\end{align}
+\begin{align}
  8-k &=5
 \\
 \implies k &=3
-\end{split}
 \end{align}
-
 \begin{figure}[h]
 	  \centering 
 	  \includegraphics[width=\columnwidth]{line2.pdf}
