--- a/vectors/12/10.4/1/nom.tex
+++ b/vectors/12/10.4/1/nom.tex
@@ -1,23 +1,39 @@
-\documentclass[journal,10pt,twocolumn]{article}
+\documentclass[12pt]{article}
 \usepackage{graphicx}
-\usepackage{commath}
-\usepackage{gensymb}
+%\documentclass[journal,12pt,twocolumn]{IEEEtran}
+\usepackage[none]{hyphenat}
+\usepackage{graphicx}
+\usepackage{listings}
+\usepackage[english]{babel}
+\usepackage{graphicx}
 \usepackage{caption} 
 \usepackage{hyperref}
-\usepackage[margin=0.5in]{geometry}
 \usepackage{booktabs}
+\usepackage{commath}
+\usepackage{gensymb}
 \usepackage{array}
 \usepackage{amsmath}   % for having text in math mode
-\usepackage{mathtools}
-\usepackage{enumitem}
+\usepackage{listings}
+\lstset{
+  frame=single,
+  breaklines=true
+}
+  
+%Following 2 lines were added to remove the blank page at the beginning
 \usepackage{atbegshi}% http://ctan.org/pkg/atbegshi
 \AtBeginDocument{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}
-\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
-\let\vec\mathbf
+%
+
+
+%New macro definitions
 \newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
 \providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\solution}{\noindent \textbf{Solution: }}
+\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
 \let\vec\mathbf
+
+
 \begin{document}
 \begin{center}
 \title{\textbf{Properties of vectors}}
@@ -32,23 +48,37 @@
 \section{Solution}
 Now,
 \begin{align}
-\overrightarrow{a}\times \overrightarrow{b} &=\begin{vmatrix}
-i & j & k\\
-1 & -7 & 7\\
-3 & -2 & 2
-\end{vmatrix}\\
-&=0\hat{i}+19\hat{j}+19\hat{k}
+\text{Let } \vec{A} = \myvec{1\\-7\\7} \text{ and } \vec{B} = \myvec{3\\ -2 \\ 2}\\
 \end{align}
-Therefore
+The cross product or vector product of $\vec{A},\vec{B}$ is defined as
+\begin{align}
+	\vec{A} \times \vec{B} = \myvec{\mydet{\vec{A}_{23}&\vec{B}_{23}\\\vec{A}_{31}&\vec{B}_{31}\\\vec{A}_{12}&\vec{B}_{12}}}
+\end{align}
+Hence
+\begin{align}
+	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{-7&-2\\7&2}=\myvec{-14\\14}\\
+	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{1&3\\7&2}=\myvec{2\\-25}\\
+	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{1&3\\-7&-2}=\myvec{-2\\-21}\\
+\end{align}
+Substituting the values
+\begin{align}
+	\vec{A}\times\vec{B}=\myvec{-14&14\\2&-25\\-2&-21}
+\end{align}
+Since
+\begin{align}
+	\vec{A} \times \vec{B} &= \vec{0},
+	\\
+	\myvec{-14&14\\2&-25\\-2&-21}&=\myvec{0\\0\\0},
+\end{align}
+which can be represented in matrix form as
+\begin{align}
+	\myvec{-14&14\\2&-25\\-2&-21}\myvec{i\\j\\k}&=\myvec{0\\-19\\19}.
+\end{align}
+Hence
 \begin{align}
 \abs{\overrightarrow{a}\times \overrightarrow{b}}&=\sqrt{0^2+19^2+19^2}\\
-\implies 26.87
+ &= \sqrt{722}
 \end{align}
-\begin{figure}[h]
-	  \centering 
-	  \includegraphics[width=\columnwidth]{nom.png}
-	  \caption{}
-	  \label{fig:nom.png}
-	  \end{figure}
+
 \end{enumerate}
 \end{document}
