--- a/vectors/12/10.4/1/nom.tex
+++ b/vectors/12/10.4/1/nom.tex
@@ -56,27 +56,18 @@ The cross product or vector product of $\vec{A},\vec{B}$ is defined as
 \end{align}
 Hence
 \begin{align}
-	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{-7&-2\\7&2}=\myvec{-14\\14}\\
-	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{1&3\\7&2}=\myvec{2\\-25}\\
-	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{1&3\\-7&-2}=\myvec{-2\\-21}\\
+	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{-7&-2\\7&2}=\myvec{-14+14}\\
+	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{1&3\\7&2}=\myvec{2-21}\\
+	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{1&3\\-7&-2}=\myvec{-2+21}\\
 \end{align}
-Substituting the values
-\begin{align}
-	\vec{A}\times\vec{B}=\myvec{-14&14\\2&-25\\-2&-21}
-\end{align}
-Since
-\begin{align}
-	\vec{A} \times \vec{B} &= \vec{0},
-	\\
-	\myvec{-14&14\\2&-25\\-2&-21}&=\myvec{0\\0\\0},
-\end{align}
+
 which can be represented in matrix form as
 \begin{align}
-	\myvec{-14&14\\2&-25\\-2&-21}\myvec{i\\j\\k}&=\myvec{0\\-19\\19}.
+	\vec{A} \times \vec{B}&=\myvec{0\\-19\\19}.
 \end{align}
 Hence
 \begin{align}
-\abs{\overrightarrow{a}\times \overrightarrow{b}}&=\sqrt{0^2+19^2+19^2}\\
+\norm{{A} \times {B}}&=\sqrt{0^2+(-19^2)+19^2}\\
  &= \sqrt{722}
 \end{align}
 
