--- a/vectors/12/10.4/1/nom.tex
+++ b/vectors/12/10.4/1/nom.tex
@@ -56,9 +56,9 @@ The cross product or vector product of $\vec{A},\vec{B}$ is defined as
 \end{align}
 Hence
 \begin{align}
-	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{-7&-2\\7&2}=\myvec{-14+14}\\
-	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{1&3\\7&2}=\myvec{2-21}\\
-	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{1&3\\-7&-2}=\myvec{-2+21}\\
+	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{-7&-2\\7&2}=\myvec{-14+14}=0\\
+	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{1&3\\7&2}=\myvec{2-21}=-19\\
+	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{1&3\\-7&-2}=\myvec{-2+21}=19\\
 \end{align}
 
 which can be represented in matrix form as
@@ -67,8 +67,10 @@ which can be represented in matrix form as
 \end{align}
 Hence
 \begin{align}
-\norm{{A} \times {B}}&=\sqrt{0^2+(-19^2)+19^2}\\
- &= \sqrt{722}
+\vec{\overrightarrow{A} \times \overrightarrow{B}}&=\sqrt{0^2+(-19^2)+19^2}\\
+&=\sqrt{0+361+361}\\
+ &= \sqrt{722}\\
+ &=26.87
 \end{align}
 
 \end{enumerate}
