--- a/vectors/12/10.4/1/nom.tex
+++ b/vectors/12/10.4/1/nom.tex
@@ -67,7 +67,7 @@ which can be represented in matrix form as
 \end{align}
 Hence
 \begin{align}
-\mydet{\vec{A} \times \vec{B}}&=\sqrt{0^2+(-19^2)+19^2}\\
+\norm{\vec{A} \times \vec{B}}&=\sqrt{0^2+(-19^2)+19^2}\\
 &=\sqrt{0+361+361}\\
  &= \sqrt{722}\\
  &=26.87
