--- a/vectors/12/10.4/1/nom.tex
+++ b/vectors/12/10.4/1/nom.tex
@@ -68,8 +68,7 @@ which can be represented in matrix form as
 Hence
 \begin{align}
 \norm{\vec{A} \times \vec{B}}&=\sqrt{0^2+19^2+19^2}\\
-&=\sqrt{0+361+361}\\
- &= \sqrt{722}\\
+ &= 19\sqrt{2}\\
 \end{align}
 
 \end{enumerate}
