--- a/Line/11.10.2.5/line.tex
+++ b/Line/11.10.2.5/line.tex
@@ -48,7 +48,7 @@ This is Problem-5 from Exercise 10.2
 \\
 Let
 \begin{align}
-\vec{m}=-2,\vec{A}=\myvec{-3\\0}\\
+m=-2,\vec{A}=\myvec{-3\\0}\\
 \vec{n}=\myvec{0&-1\\0&1}\myvec{1\\m}\\ 
 \vec{n}=\myvec{0&-1\\0&1}\myvec{1\\-2}
 \end{align}
@@ -58,11 +58,11 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 \end{align}
 The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}(-3,0)$ is given by
 \begin{align}
-	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
-	\myvec { 2 & 1 } \brak{ \vec{ x  - \myvec{ -3 \\ 0}}}  &= 0  \\
-	\myvec{ 2 & 1} \vec{x} +6 &= 0 \\
+	\vec{n}^\top\brak{\myvec{x\\y}-\vec{A}} &= 0 \\
+	\myvec { 2 & 1 } \brak{ \myvec{ x\\y } - \myvec{ -3 \\ 0}} &= 0  \\
+	\myvec{ 2 & 1} \myvec{x\\y} +6 &= 0 \\
         \label{eq:1}
-	\myvec{ 2 & 1} \vec{x}  &= -6
+	\myvec{ 2 & 1} \myvec{x\\y}  &= -6
 \end{align}
 
  The line segment is as shown in Figure \ref{fig:Fig1}.
@@ -77,3 +77,4 @@ The equation of a line with normal vector $\vec{n}$ and passing through a point 
 \end{enumerate}
 
 \end{document}
+Footer
