--- a/Line/11.10.2.5/line.tex
+++ b/Line/11.10.2.5/line.tex
@@ -46,9 +46,11 @@ This is Problem-5 from Exercise 10.2
 \\
 \solution 
 \\
-Let
+Let 
 \begin{align}
-m=-2,\vec{A}=\myvec{-3\\0}\\
+\vec{x}=\myvec{x\\y}\\
+\vec{A}=\myvec{-3\\0}\\
+\vec{m}=-2\\
 \vec{n}=\myvec{0&-1\\1&0}\myvec{1\\m}\\ 
 \vec{n}=\myvec{0&-1\\1&0}\myvec{1\\-2}
 \end{align}
@@ -56,7 +58,7 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
 \vec{n} &=  \myvec{2 \\1} 
 \end{align}
-The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}(-3,0)$ is given by
+The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by
 \begin{align}
 	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
 	\myvec { 2 & 1 } \brak{ \vec{x} - \myvec{ -3 \\ 0}} &= 0  \\
