--- a/Line/11.10.2.5/line.tex
+++ b/Line/11.10.2.5/line.tex
@@ -44,19 +44,23 @@ This is Problem-5 from Exercise 10.2
 \begin{enumerate}
 \item Instersecting the x-axis at a distance of 3 units to the left of origin with slope of -2.
 \\
+
 \solution 
 \\
-Let 
+
+           where $\vec{A}$ and $\vec{m}$ is 
+\begin{align}		
+\vec{m}=-2
+\end{align}
 \begin{align}
-\vec{x}=\myvec{x\\y}\\
-\vec{A}=\myvec{-3\\0}\\
-\vec{m}=-2\\
-\vec{n}=\myvec{0&-1\\1&0}\myvec{1\\m}\\ 
-\vec{n}=\myvec{0&-1\\1&0}\myvec{1\\-2}
+\vec{A}=\myvec{-3\\0}
 \end{align}
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
-\vec{n} &=  \myvec{2 \\1} 
+\vec{n}=\myvec{0&-1\\1&0}\myvec{1\\m}
+\end{align}
+\begin{align}
+\vec{n} &= \myvec{2 \\1} 
 \end{align}
 The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by
 \begin{align}
