--- a/Line/11.10.2.5/line.tex
+++ b/Line/11.10.2.5/line.tex
@@ -47,17 +47,16 @@ This is Problem-5 from Exercise 10.2
 
 \solution 
 \\
-
-           where $\vec{A}$ and $\vec{m}$ is 
 \begin{align}		
-\vec{m}=-2
+m=-2\\
+\vec{m}=\myvec{1\\-2}
 \end{align}
 \begin{align}
 \vec{A}=\myvec{-3\\0}
 \end{align}
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
-\vec{n}=\myvec{0&-1\\1&0}\myvec{1\\m}
+\vec{n}=\myvec{0&-1\\1&0}\myvec{1\\-2}
 \end{align}
 \begin{align}
 \vec{n} &= \myvec{2 \\1} 
