--- a/Line/11/10/3/parallel.tex
+++ b/Line/11/10/3/parallel.tex
@@ -59,31 +59,38 @@ This is Problem-6 from Exercise 10.3
 \\
 Given line is 
 \begin{align}
-	15x+8y-34=0 \text{ and} 15x+8y+31=0
+	15x+8y-34=0\text{ and }15x+8y+31=0
 \end{align}
 this equation can be expressed as 
 \begin{align}
 	\vec{n}^{\top}\vec{x}=c	
 \end{align}
 \begin{align}
-\text{ where }\
+\text{ where }
 		\vec{n} = \myvec{15 \\8}&=-34\\
 		\vec{n} = \myvec{15 \\8}&= 31
 \end{align} 
 distance between parallel lines 
 \begin{align}
-\vec{d}=\frac{\left|c1-c2\right|}{\norm{n}}\\
-\vec{d}=\frac{\left|-34-31)\right|}{\sqrt{289}}
+\vec{d}&=\frac{\left|c1-c2\right|}{\norm{n}}\\
+\vec{d}&=\frac{\left|-34-31)\right|}{\sqrt{289}}
 \end{align}
 		
 \begin{align}
 	\vec{d}=\frac{65}{17}
 \end{align}
-	\item solutionforproblem 2
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=\columnwidth]{para.png}
+\end{center}
+\caption{}
+\label{fig:Fig1}
+\end{figure}
+	\item solution for problem 2
 	\\
 Given line is 
 \begin{align}
-	l(x+y)+p=0 and  l(x+y)-r=0
+l(x+y)+p=0\text{ and }l(x+y)-r=0
 \end{align}
 this equation can be expressed as 
 \begin{align}
@@ -91,21 +98,21 @@ this equation can be expressed as
 \end{align}
 \begin{align}
 \text{ where }
-		\vec{n} = \myvec{l\\l}&= p\\
+		\vec{n} = \myvec{l\\l}&=p\\
 		\vec{n} = \myvec{l\\l}&=-r
 \end{align}
 distance between parallel lines 
 \begin{align}
-\vec{d}=\frac{\left|p-(-r))\right|}{\sqrt{2l^{2}}}\\
-\vec{d}=\frac{\left|p+r)\right|}{l\sqrt{2}}
+\vec{d}&=\frac{\left|p-(-r))\right|}{\sqrt{2l^{2}}}\\
+\vec{d}&=\frac{\left|p+r)\right|}{l\sqrt{2}}
 \end{align}
 		
-%\begin{figure}[!h]
-%\begin{center}
-%\includegraphics[width=\columnwidth]{figs/fig.pdf}
-%\end{center}
-%\caption{}
-%\label{fig:Fig1}
-%\end{figure}
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=\columnwidth]{para1.png}
+\end{center}
+\caption{}
+\label{fig:Fig2}
+\end{figure}
 \end{enumerate}
 \end{document}
