--- a/matrices/lines/11.10.3.6/parallel.tex
+++ b/matrices/lines/11.10.3.6/parallel.tex
@@ -75,7 +75,7 @@ this equation can be expressed as
 \end{align} 
 distance between parallel lines 
 \begin{align}
-d&=\frac{\abs{c_1-c_2}}{\norm{n}}\\
+d&=\frac{\abs{c_1-c_2}}{\vec{n}}\\
 &=\frac{\abs{-34-31}}{\sqrt{289}}\\
 &=\frac{65}{17}
 \end{align}
@@ -105,11 +105,11 @@ this equation can be expressed as
 \end{align}
 distance between parallel lines 
 \begin{align}
-d&=\frac{\abs{p-(-r)}}{\sqrt{l^{2}}}\\
+d&=\frac{\abs{c_1-c_2}}{\vec{n}}\\
 &=\frac{\abs{p+r}}{l\sqrt{2}}
 \end{align}	
 The distance between parallel lines 
-is shown in figure \eqref{fig:Fig2} with normal vector as 
+is shown in figure 2  with normal vector as 
 \begin{align*}
 \vec{n} =\myvec{8\\8} \text{ and }c_1=16,c_2=-16
 \end{align*}
