--- a/matrices/lines/11.10.3.6/parallel.tex
+++ b/matrices/lines/11.10.3.6/parallel.tex
@@ -75,7 +75,7 @@ this equation can be expressed as
 \end{align} 
 distance between parallel lines 
 \begin{align}
-d&=\frac{\abs{c_1-c_2}}{\vec{n}}\\
+d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
 &=\frac{\abs{-34-31}}{\sqrt{289}}\\
 &=\frac{65}{17}
 \end{align}
@@ -105,7 +105,7 @@ this equation can be expressed as
 \end{align}
 distance between parallel lines 
 \begin{align}
-d&=\frac{\abs{c_1-c_2}}{\vec{n}}\\
+d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
 &=\frac{\abs{p+r}}{l\sqrt{2}}
 \end{align}	
 The distance between parallel lines 
