--- a/matrices/lines/11.10.3.6/parallel.tex
+++ b/matrices/lines/11.10.3.6/parallel.tex
@@ -99,14 +99,15 @@ this equation can be expressed as
 \end{align}
 \begin{align}
 \text{ where }
-\vec{n}& = \myvec{l\\l},c_1=p,c_2=-r\\
-& =\myvec{l&l}\vec{x}=p\\ 
-& =\myvec{l&l}\vec{x}=-r		
+\vec{n}& = \myvec{1\\1},c_1=1,c_2=-1\\
+& =\myvec{1&1}\vec{x}=1\\ 
+& =\myvec{1&1}\vec{x}=-1		
 \end{align}
 distance between parallel lines 
 \begin{align}
 d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
-&=\frac{\abs{p+r}}{l\sqrt{2}}
+&=\frac{\abs{2}}{\sqrt{2}}\\
+&=\sqrt{2}
 \end{align}	
 The distance between parallel lines 
 is shown in figure 2  with normal vector as 
