--- a/matrices/lines/11.10.3.6/parallel.tex
+++ b/matrices/lines/11.10.3.6/parallel.tex
@@ -63,15 +63,12 @@ Given line is
 	15x+8y-34=0\text{ and }15x+8y+31=0
 \end{align}
 this equation can be expressed as 
-\begin{align}
-	\vec{n}^{\top}\vec{x}=c_1\\	
-	\vec{n}^{\top}\vec{x}=c_2	
-\end{align}
+
 \begin{align}
 \text{ where }
-\vec{n}&=\myvec{15\\8},c_1=-34, c_2= 31\\
 & \myvec{15&8}\vec{x}=-34\\ 
 & \myvec{15&8}\vec{x}=31\\
+\vec{n}&=\myvec{15\\8},c_1=-34, c_2= 31
 \end{align} 
 distance between parallel lines 
 \begin{align}
@@ -94,20 +91,14 @@ l(x+y)+p=0\text{ and }l(x+y)-r=0
 \end{align}
 this equation can be expressed as 
 \begin{align}
-\vec{n}^{\top}\vec{x}=c_1\\
-\vec{n}^{\top}\vec{x}=c_2
-\end{align}
-\begin{align}
 \text{ where }
-\vec{n}& = \myvec{1\\1},c_1=1,c_2=-1\\
-& =\myvec{1&1}\vec{x}=1\\ 
-& =\myvec{1&1}\vec{x}=-1		
+\vec{n}& =\myvec{1\\1}\\
+& =\myvec{1&1}\vec{x}=\frac{-p}{l}\\ 
+& =\myvec{1&1}\vec{x}=\frac{-r}{l}		
 \end{align}
 distance between parallel lines 
 \begin{align}
-d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
-&=\frac{\abs{2}}{\sqrt{2}}\\
-&=\sqrt{2}
+d&=\frac{1}{l\sqrt{2}}(p+r)
 \end{align}	
 The distance between parallel lines 
 is shown in figure 2  with normal vector as 
