--- a/matrices/lines/11.10.3.6/parallel.tex
+++ b/matrices/lines/11.10.3.6/parallel.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{article}
-\twocolumn
 \usepackage{graphicx}
 %\documentclass[journal,12pt,twocolumn]{IEEEtran}
 \usepackage[none]{hyphenat}
@@ -26,10 +25,9 @@
 \usepackage{listings}
 \lstset{
 language=tex,
-frame=single, 
+frame=single,
 breaklines=true
 }
-  
 %Following 2 lines were added to remove the blank page at the beginning
 \usepackage{atbegshi}% http://ctan.org/pkg/atbegshi
 \AtBeginDocument{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}
@@ -52,20 +50,22 @@ breaklines=true
 \section*{11$^{th}$ Maths - Chapter 10}
 This is Problem-6 from Exercise 10.3
 \begin{enumerate}
-	\item Find the distance between parallel lines 
-	
+\item Find the distance between parallel lines
+
 (i) 15x+8y-34=0 and  15x+8y+31=0 \\
 (ii) l(x+y)+p=0 and  l(x+y)-r=0
-\	
-\item solution for problem 1
+\end{enumerate}
+\begin{enumerate}
 
-where
+\item solution for problem 1
+\\
+The given line can be expressed as
 \begin{align}
-&=\myvec{15&8}\vec{x}=-34\\ 
-&=\myvec{15&8}\vec{x}=31\\
-\vec{n}&=\myvec{15\\8},c_1=-34, c_2= 31
-\end{align} 
-distance between parallel lines 
+\myvec{15&8}\vec{x}&=-34\\
+\myvec{15&8}\vec{x}&=31\\
+\vec{n}&=\myvec{15\\8},c_1=-34,c_2= 31
+\end{align}
+distance between parallel lines
 \begin{align}
 d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
 &=\frac{\abs{-34-31}}{\sqrt{289}}\\
@@ -78,22 +78,22 @@ d&=\frac{\abs{c_1-c_2}}{\norm{\vec{n}}}\\
 \label{fig:para.png}
 \end{figure}
 \
-	\item solution for problem 2
-	
- where
+ \item solution for problem 2
+ \\
+ The given line can be expressed as
 \begin{align}
-\vec{n}&=\myvec{1\\1}\\
-&=\myvec{1&1}\vec{x}=\frac{-p}{l}\\ 
-&=\myvec{1&1}\vec{x}=\frac{-r}{l}		
+\vec{n}=\myvec{1\\1}\\
+\myvec{1&1}\vec{x}&=\frac{-p}{l}\\
+\myvec{1&1}\vec{x}&=\frac{-r}{l}
 \end{align}
-distance between parallel lines 
+distance between parallel lines
 \begin{align}
 d&=\frac{1}{l\sqrt{2}}(p+r)
-\end{align}	
-The distance between parallel lines 
-is shown in figure 2  with normal vector as 
+\end{align}
+The distance between parallel lines
+is shown in figure 2  with normal vector as
 \begin{align*}
-&=\vec{n} =\myvec{1\\1} \text{ and }c_1=1,c_2=-1
+\vec{n}&=\myvec{1\\1} \text{ and }c_1=1,c_2=-1
 \end{align*}
 \begin{figure}[h!]
 \centering
@@ -102,4 +102,5 @@ is shown in figure 2  with normal vector as
 \label{fig:para1.png}
 \end{figure}
 \end{enumerate}
+
 \end{document}
