--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -63,7 +63,14 @@ upon simplifying \eqref{1} and \eqref{2}
 \end{align}
 Thus,the posiible equations of the line as
 \begin{align}
-\myvec{2,-3}\vec{x}&=6\\
+\vec{n}=\myvec{2\\-3}\\
+\myvec{2,-3}(\vec{x}-\myvec{3\\-2})&=6\\
+\myvec{2,-3}\vec{x}&=6
+\end{align}
+     \hspace{60mm} or
+\begin{align}
+\vec{n}=\myvec{-3\\2}\\
+\myvec{-3,2}(\vec{x}-\myvec{-2\\3})&=6\\
 \myvec{-3,2}\vec{x}&=6
 \end{align}
 \begin{figure}[h!]
