--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -42,7 +42,7 @@ breaklines=true
 \let\vec\mathbf
 \begin{document}
 \begin{center}
-\title{\textbf{Parallel Lines}}
+\title{\textbf{ Intercepts Lines}}
 \date{\vspace{-5ex}} %Not to print date automatically
 \maketitle
 \end{center}
@@ -71,29 +71,20 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 \vec{n}&=\myvec{0&-1\\1&0}\myvec{3\\2}\\
 &=\myvec{-2 \\3} 
 \end{align}
-The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by
+The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by $(-2,3)\vec{x}=6$ and for $\vec{B}$ is $(-3,-2)\vec{x}=6$
 \begin{align}
 	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
 	\myvec { -2 & 3 } \vec{x}  &= 6  
 \end{align}
 \hspace{60mm Or}
 \begin{align}
-\vec{n}&=\myvec{0&-1\\1&0}\myvec{-2\\3}\\
- &=\myvec{-3 \\-2} 
-\end{align}
-The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{B}$ is given by
-\hspace{60mm}
-\begin{align}
 	\myvec { -3 & -2 }  \vec{x}  &= 6        
 \end{align}
- The line segment is as shown in Figure \ref{fig:Fig1}.
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\columnwidth]{./figs/inter.png}
 \caption{}
-\label{fig:inter.png}
+\label{fig:line segment}
 \end{figure}
-
 \end{enumerate}
-
 \end{document}
