--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -66,20 +66,28 @@ upon simplifying \eqref{1} and \eqref{2}
 \begin{align}		
 \vec{m}&=\myvec{3\\2}0r \myvec{-2\\3}
 \end{align}
+\item[case 1]
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
 \vec{n}&=\myvec{0&-1\\1&0}\myvec{3\\2}\\
 &=\myvec{-2 \\3} 
 \end{align}
-The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by $(-2,3)\vec{x}=6$ and for $\vec{B}$ is $(-3,-2)\vec{x}=6$
 \begin{align}
 	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
 	\myvec { -2 & 3 } \vec{x}  &= 6  
 \end{align}
-\hspace{60mm Or}
+\hspace{60mm \textbf{or}}\\
+\item[case 2]
+$\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
+\vec{n}&=\myvec{0&-1\\1&0}\myvec{-2\\3}\\
+&=\myvec{-3 \\-2} 
+\end{align}
+\begin{align}
+    \vec{n}^\top\brak{\vec{x}-\vec{B}} &= 0 \\  
 	\myvec { -3 & -2 }  \vec{x}  &= 6        
 \end{align}
+The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by $(-2,3)\vec{x}=6$ and for $\vec{B}$ is $(-3,-2)\vec{x}=6$
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\columnwidth]{./figs/inter.png}
