--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -52,7 +52,7 @@ This is Problem-3 from Exercise 10.4
 \begin{enumerate}
 \item Find the equations of the lines, which cut-off intercepts on the axes whose sum and product are 1 and -6,resspectively.
 \section{Solution}
-Let the x intercept be a and  the y intercept be b ,Then
+Let the $x$ intercept be $a$ and  the $y$ intercept be $b$ ,Then
 \begin{align}
 \myvec{a+b}&=1\label{1}\\
 \myvec{ab}&=-6 \label{2}
@@ -66,7 +66,7 @@ upon simplifying \eqref{1} and \eqref{2}
 \begin{align}		
 \vec{m}&=\myvec{3\\2}0r \myvec{-2\\3}
 \end{align}
-\item[case 1]
+\item 
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
 \vec{n}&=\myvec{0&-1\\1&0}\myvec{3\\2}\\
@@ -76,8 +76,8 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
 	\myvec { -2 & 3 } \vec{x}  &= 6  
 \end{align}
-\hspace{60mm \textbf{or}}\\
-\item[case 2]
+   \text{or}\\
+\item 
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
 \vec{n}&=\myvec{0&-1\\1&0}\myvec{-2\\3}\\
@@ -90,7 +90,7 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 The equation of a line with normal vector $\vec{n}$ and passing through a point $\vec{A}$ is given by $(-2,3)\vec{x}=6$ and for $\vec{B}$ is $(-3,-2)\vec{x}=6$
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\columnwidth]{./figs/inter.png}
+\includegraphics[width=\columnwidth]{/home/srikanth/line/11.10.4.3/figs/inter.png}
 \caption{}
 \label{fig:line segment}
 \end{figure}
