--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -76,7 +76,7 @@ $\implies$ The normal vector $\vec{n}$ to the line is given as
 	\vec{n}^\top\brak{\vec{x}-\vec{A}} &= 0 \\
 	\myvec { -2 & 3 } \vec{x}  &= 6  
 \end{align}
-   \text{or}\\
+   \textbf{or}\\
 \item 
 $\implies$ The normal vector $\vec{n}$ to the line is given as
 \begin{align}
