--- a/matrices/lines/11.10.4.3/intercets.tex
+++ b/matrices/lines/11.10.4.3/intercets.tex
@@ -64,7 +64,7 @@ upon simplifying \eqref{1} and \eqref{2}
 &=\myvec{3\\2}
 \end{align}
 \begin{align}		
-\vec{m}&=\myvec{3\\2}0r \myvec{-2\\3}
+\vec{m}&=\myvec{3\\2} \text{or,} \myvec{-2\\3}
 \end{align}
 \item 
 $\implies$ The normal vector $\vec{n}$ to the line is given as
