--- a/matrices/lines/12.11.2.2/par.tex
+++ b/matrices/lines/12.11.2.2/par.tex
@@ -52,17 +52,17 @@
 \vec{D}=\myvec{3 \\ 5\\6}
 \end{align}
 \begin{align}
-\vec{AB} &=\brak{\vec{A}-\vec{B}} = \brak{\myvec{1 \\-1\\ 2 } - \myvec{3 \\4\\-2 } } = \myvec{2 \\ 5\\-4 }\\
-\vec{CD} &= \brak{\vec{C}-\vec{D}} = \brak{\myvec{0 \\ 3\\2 } - \myvec{3 \\5\\6} } = \myvec{3\\2\\4}
+\vec{A}-\vec{B} &= \brak{\myvec{1 \\-1\\ 2 } - \myvec{3 \\4\\-2 } } = \myvec{2 \\ 5\\-4 }\\
+\vec{C}-\vec{D} &= \brak{\myvec{0 \\ 3\\2 } - \myvec{3 \\5\\6} } = \myvec{3\\2\\4}
 \end{align}
  If two vectors are perpendicular
 \begin{align}
-\vec{AB}^\top\vec{CD}=\vec{0}\\
+\vec{A}^\top\vec{B}=\vec{0}\\
  \myvec{2 & 5& -4}\myvec{3 \\2\\4 } &= \vec{0}\\
  \implies 6+10-16&=0
 \end{align}
 
-We know that $\vec{AB} \text{ and } \vec{CD}$ , $\vec{AB}\perp \vec{CD}$ 
+We know that $AB$ \text{ and } $CD$ , $AB\perp CD$ 
 
 %\begin{figure}[h!]
 %	  \centering 
