--- a/matrices/lines/12.11.3.2/unit.tex
+++ b/matrices/lines/12.11.3.2/unit.tex
@@ -47,10 +47,7 @@
 \section{Solution}
 Normal vector to the plane is
 \begin{align} 
-\vec{n}&=\myvec{3\\5\\-6}
-\end{align}
-unit vector 
-\begin{align}
+\vec{n}&=\myvec{3\\5\\-6}\\
 d&=\frac{\abs{\vec{n}^\top\vec{n}-\vec{c}}}{\norm{n}}\\
 7&=\frac{\abs{\vec{c}}}{\norm{n}}\\
 \norm{\vec{n}}&=\sqrt{\myvec{3& 5& -6}\myvec{3\\5\\-6}}\\
