--- a/matrices/lines/12.11.3.2/unit.tex
+++ b/matrices/lines/12.11.3.2/unit.tex
@@ -49,14 +49,14 @@ Normal vector to the plane is
 \begin{align} 
 \vec{n}&=\myvec{3\\5\\-6}\\
 d&=\frac{\abs{\vec{n}^\top\vec{n}-\vec{c}}}{\norm{n}}\\
-7&=\frac{\abs{\vec{c}}}{\norm{n}}\\
+\implies7&=\frac{\abs{\vec{c}}}{\norm{n}}\\
 \norm{\vec{n}}&=\sqrt{\myvec{3& 5& -6}\myvec{3\\5\\-6}}\\
-&=\sqrt{70}
+\implies&\sqrt{70}\\
+\abs{\vec{c}}&=7\sqrt{70}\\
 \end{align}
 vector equation of plane is
 \begin{align}
-\abs{\vec{c}}&=7\sqrt{70}\\
-\vec{c}&=\pm7\sqrt{70}
+\implies\vec{c}&=\pm7\sqrt{70}
 \end{align}	  
 \end{enumerate} 
 \end{document}
