--- a/matrices/lines/12.11.3.2/unit.tex
+++ b/matrices/lines/12.11.3.2/unit.tex
@@ -51,8 +51,8 @@ Normal vector to the plane is
 d&=\frac{\abs{\vec{n}^\top\vec{n}-\vec{c}}}{\norm{n}}\\
 \implies7&=\frac{\abs{\vec{c}}}{\norm{n}}\\
 \norm{\vec{n}}&=\sqrt{\myvec{3& 5& -6}\myvec{3\\5\\-6}}\\
-\implies&\sqrt{70}\\
-\abs{\vec{c}}&=7\sqrt{70}\\
+&=\sqrt{70}\\
+\implies\abs{\vec{c}}&=7\sqrt{70}\\
 \end{align}
 vector equation of plane is
 \begin{align}
