--- a/matrices/lines/12.11.3.2/unit.tex
+++ b/matrices/lines/12.11.3.2/unit.tex
@@ -48,8 +48,8 @@
 Normal vector to the plane is
 \begin{align} 
 \vec{n}&=\myvec{3\\5\\-6}\\
-d&=\frac{\abs{\vec{n}^\top\vec{n}-\vec{c}}}{\norm{n}}\\
-\implies7&=\frac{\abs{\vec{c}}}{\norm{n}}\\
+d&=\frac{\abs{\vec{n}^\top\vec{n}-\vec{c}}}{\norm{\vec{n}}}\\
+\implies7&=\frac{\abs{\vec{c}}}{\norm{\vec{n}}}\\
 \norm{\vec{n}}&=\sqrt{\myvec{3& 5& -6}\myvec{3\\5\\-6}}\\
 &=\sqrt{70}\\
 \implies\abs{\vec{c}}&=7\sqrt{70}\\
