--- a/matrices/lines/12.11.4.2/percosine.tex
+++ b/matrices/lines/12.11.4.2/percosine.tex
@@ -35,7 +35,7 @@
 
 \begin{document}
 \begin{center}
-\title{\textbf{Properties of vectors}}
+\title{\textbf{Properties of lines}}
 \date{\vspace{-5ex}} %Not to print date automatically
 \maketitle
 \end{center}
@@ -47,28 +47,66 @@
 \item If $l_1$,$m_1$,$n_1$ \text{ and } $l_2$,$m_2$,$n_2$ are the direction cosines of two mutually perpendicular lines, show that the direction cosines of the line perpendicular to both these are  $m_1n_2-m_2n_1$, $n_1l_2-n_2l_1$, $l_1m_2-l_2m_1$.
 
 \section{Solution}
-Now,
 \begin{align}
-\text{Let } \vec{A} = \myvec{l_1\\m_1\\n_1} \text{ and } \vec{B} = \myvec{l_2\\ m_2 \\ n_2}\\
-\end{align}
-The cross product or vector product of $\vec{A},\vec{B}$ is defined as
+ l_1l_2+m_1m_2+n_1n_2=0\label{1}
+ \end{align}
+ \begin{align}
+ l_1^2+m_1^2+n_1^2=0\label{2}
+  \end{align}
+  \begin{align}
+  l_2^2+m_2^2+n_2^2=0\label{3}
+  \end{align}
+\\
+In order to proove the vector  $m_1n_2-m_2n_1$, $n_1l_2-n_2l_1$, $l_1m_2-l_2m_1$ is perpendicular to both the vectors $l_1$,$m_1$,$n_1$ \text{ and } $l_2$,$m_2$,$n_2$. Let us consider the matrix \textbf{P}.
+\\
+\\
+\textbf{P}=
+	$\begin{pmatrix}
+l_1&l_2&m_1n_2-m_2n_1\\
+        m_1&m_2&n_1l_2-n_2l_1\\
+        n_1&n_2&l_1m_2-l_2m_1\\
+	\end{pmatrix}$
+	\\
+	\\	
+	\\
+	$\textbf{P}^{\top}$ =
+	$\begin{pmatrix}
+l_1&m_1&n_1\\
+l_2&m_2&n_2\\
+m_1n_2-m_2n_1&m_2&n_1l_2-n_2l_1&n_2&l_1m_2-l_2m_1
+	\end{pmatrix}$ 
+	\\
+	\\
+	\\
+	\\
+	\\
+	\\
+	If the three vectors are mutually perpendicular then
+	\\
+	\begin{align}
+	P^{\top} P=I
+	\end{align}
+	This is prooved from the result of python and from the \eqref{1},\eqref{2} and \eqref{3}.\\
+where 	
 \begin{align}
-	\vec{A} \times \vec{B} = \myvec{\mydet{\vec{A}_{23}&\vec{B}_{23}\\\vec{A}_{31}&\vec{B}_{31}\\\vec{A}_{12}&\vec{B}_{12}}}
-\end{align}
-Hence
-\begin{align}
-	\mydet{\vec{A}_{23}&\vec{B}_{23}}&=\mydet{m_1&n_1\\n_2&n_2}=\myvec{m_1n_2-m_2n_1}\\
-	\mydet{\vec{A}_{31}&\vec{B}_{31}}&=\mydet{n_1&l_1\\n_2&l_2}=\myvec{n_1l_2-n_2l_1}\\
-	\mydet{\vec{A}_{12}&\vec{B}_{12}}&=\mydet{l_1&m_1\\l_2&m_2}=\myvec{l_1m_2-l_2m_1}
-\end{align}
+\vec{I}&=
+\myvec{
+	         1&0&0\\
+	          0&1&0\\
+	           0&0&1
+	           }
+	\end{align}
+	
+	Hences,The three vectors are mutually perpendicular\\
+	So we prooved that If $l_1$,$m_1$,$n_1$ \text{ and } $l_2$,$m_2$,$n_2$ are the direction cosines of two mutually perpendicular lines, show that the direction cosines of the line perpendicular to both these are  $m_1n_2-m_2n_1$, $n_1l_2-n_2l_1$, $l_1m_2-l_2m_1$.
+	
+	\noindent\fbox{%
+    \parbox{\linewidth}{%
+   	\url{https://github.com/ahilan22/fwc-2/tree/main/probability/assignment/codes/12-13-4-6.py}
+   	%}%
+    }%
+}
 
-which can be represented in matrix form as
-\begin{align}
-	\vec{A} \times \vec{B}&=\myvec{m_1n_2-m_2n_1\\n_1l_2-n_2l_1\\l_1m_2-l_2m_1}
-\end{align}
-Hence
-The given quation is that the direction cosines of the line perpendicular to both these are  $m_1n_2-m_2n_1$, $n_1l_2-n_2l_1$, $l_1m_2-l_2m_1$.
-
-
-\end{enumerate}
+\end{enumerate}							
 \end{document}
+
