--- a/matrices/lines/12.11.4.2/percosine.tex
+++ b/matrices/lines/12.11.4.2/percosine.tex
@@ -99,10 +99,11 @@ where
 	
 	Hences,The three vectors are mutually perpendicular\\
 	So we prooved that If $l_1$,$m_1$,$n_1$ \text{ and } $l_2$,$m_2$,$n_2$ are the direction cosines of two mutually perpendicular lines, show that the direction cosines of the line perpendicular to both these are  $m_1n_2-m_2n_1$, $n_1l_2-n_2l_1$, $l_1m_2-l_2m_1$.
+	\\
 	
 	\noindent\fbox{%
     \parbox{\linewidth}{%
-   	\url{https://github.com/ahilan22/fwc-2/tree/main/probability/assignment/codes/12-13-4-6.py}
+   	\url{https://github.com/srikanth9515/FWC/blob/main/matrices/lines/12.11.4.2/code/cosin.py}
    	%}%
     }%
 }
