--- a/circle/11.11.1.4/circ.tex
+++ b/circle/11.11.1.4/circ.tex
@@ -34,7 +34,8 @@ So, here
 \begin{align}
 	\vec{u} &= \myvec{\frac{1}{2}\\[2pt]\frac{1}{2}}\\
 	f &= \norm{\vec{u}}^2 - r^2\\
-	  &= \myvec{\frac{1}{2}&\frac{1}{2}}\myvec{\frac{1}{2}\\[2pt]\frac{1}{2}} = 0
+	  &= \myvec{\frac{1}{2}&\frac{1}{2}}\myvec{\frac{1}{2}\\[2pt]\frac{1}{2}}-2\\
+	  &=2-2=0	  
 \end{align}
 Thus ,the equation of circle is obtained as
 \begin{align}
