--- a/circle/11.11.1.4/circ.tex
+++ b/circle/11.11.1.4/circ.tex
@@ -32,14 +32,16 @@ We know the equation of the circle is given as
 \end{align}
 So, here
 \begin{align}
-	\vec{u} &= \myvec{\frac{1}{2}\\[2pt]\frac{1}{2}}\\
+\vec{u}&=\vec{-c}\\
+	 &= \myvec{-1\\-1}\\
 	f &= \norm{\vec{u}}^2 - r^2\\
-	  &= \myvec{\frac{1}{2}&\frac{1}{2}}\myvec{\frac{1}{2}\\[2pt]\frac{1}{2}}-2\\
-	  &=-\frac{3}{2}	  
+	  &= \myvec{-1&-1}\myvec{-1\\-1}-2\\
+	  &=1+1-2\\
+	  &=0	  
 \end{align}
 Thus ,the equation of circle is obtained as
 \begin{align}
-	\norm{\vec{x}}^2 + \myvec{1&1}\vec{x}-\frac{3}{2} &= 0       		       
+	\norm{\vec{x}}^2 +2\myvec{-1&-1}\vec{x}&= 0       		       
 \end{align}	
 \begin{figure}[!h]
 	\begin{center} 
