--- a/circle/9.10.4.2/chord.tex
+++ b/circle/9.10.4.2/chord.tex
@@ -93,8 +93,8 @@ here
 \end{align}
 Obtain the point of intersection of line $\vec{PQ}$,$\vec{RS}$
 \begin{align}
-\vec{n_1\top\myvec{\vec{X}-\vec{P}}}&=0\label{15}\\
-\vec{n_2\top\myvec{\vec{X}-\vec{R}}}&=0\label{16}\\
+\vec{n_1^\top\myvec{\vec{X}-\vec{P}}}&=0\label{15}\\
+\vec{n_2^\top\myvec{\vec{X}-\vec{R}}}&=0\label{16}\\
 \vec{n_1}&=\myvec{1.4217\\-0.47822}\\
 \vec{n_2}&=\myvec{1.4703\\0.2967}
 \end{align}
